css/core.css
html {
  height: 100%;
  width: 100%;
}  
body {
  width: 100%;
  margin: 0px;
  display: flex;
  flex-direction: column;
  background-color: black;
  font-size: 2em;
  color: white;
}

.fa-youtube-play {
  color: #8B0000;  
}

.fa-eye {
  color: gray
}

.fa-eye:hover {
  color: aquamarine;
}

.fa-youtube-play:hover {
  color: red;  
}

.fa-github:hover {
  color: limegreen;  
}

.fa-github {
  color: #2E8B57;  
}

a,
a:hover,
a:visited,
a:link,
a:active {
  color: inherit;
  text-decoration: none;
  font-size: 1.1em;
}

a.anchor, a.portfolioanchor {
  display: block;
  position: relative;
  top: -120px;
  visibility: hidden;
}

a.portfolioanchor {
  top: -25px;
}

h4 {
  margin-bottom: 0px;
}

.limegreen {
  color: limegreen;
}
.text-medium-big{
  font-size: 1.3em;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: black;
  position: fixed;
  width: 100%;
  border-bottom: 2px dotted white;
  box-sizing: border-box;
  z-index: 2;
  padding: 10px;
}

nav a:hover, nav a i.fa:hover {
  text-decoration: none;
  animation-name: nav-link-hover;
  animation-duration: 1.5s;
  animation-fill-mode: forwards;
  animation-timing-function: ease-out;
  cursor: hand; 
}

nav a i.fa:hover {
  animation-name: nav-link-hover;
}

.look-here {
  animation-name: navigator-signal;
  animation-duration: 1s;
  animation-iteration-count: infinite;
}

i.fa {
  font-weight: 500
}

i.fa-code:hover {  color: #1ec503 }
i.fa-envelope-o:hover {  color: #ea4335 }
i.fa-linkedin:hover {  color: #007bb6 }
i.fa-twitter:hover {  color: #00aced }
i.fa-facebook:hover {  color: #3b5998 }
i.fa-instagram:hover {   
    background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 50%,#d6249f 75%,#285AEB 90%);
    color:transparent; 
   -webkit-background-clip: text;
   background-clip: text;
}

section {
  justify-content: center;
}

#me {
  height: 100vh;
  display: flex;
  flex-direction: column;
  font-size: 1.5em;
}

#me p  {
  text-align: center;
  line-height: 1.5;
}

#whoAmI  {
  min-height: 75px;
}

#portfolio {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin-top: 35px; 
}

.face.back::-webkit-scrollbar ,#portfolio::-webkit-scrollbar {
    width: 0px;  /* remove scrollbar space */
    background: transparent;  /* optional: just make scrollbar invisible */
}



#portfolio heading {
  font-size: 0.5em;
  text-align: center;
  margin-bottom: 15px;
}

article {
  text-align: center;
  min-width: 250px;
  margin: 75px 10px;
}

article p {
  margin-top: 0px;
}

.face .fa {
  font-size: 2em;
  margin: 0px 5px;
}


#portfolio:first-child {
  margin: 0px 0px 75px 0px;
}

#portfolio article heading {
  font-size: 0.7em;
  font-weight: 600;
  margin-bottom: 0px;
  display: block;
}

article > div > span {
  background: #777;
  border-radius: 6px;
  font-size: 0.5em;
  padding: 3px;
  font-weight: 700;
}


figure{
  margin-bottom: 0px;
}

.fig-container {
  max-width: 450px;
  min-height: 160px;
  /* horizontal center*/
  margin-left: auto;
  margin-right: auto;
  perspective: 1000;
}

.card {
  width: 100%;
  min-height: 250px;
  transform-style: preserve-3d;
  transition: all 0.5s linear;
  border: 2px solid white;
  border-radius: 20px;
}

.fig-container:hover .card {
  transform: rotateY(180deg);
}

.face {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  border-radius: 17px;  
}

.face b {
  font-size: 1.3em;
  margin-right: 3px; 
}

.face p {
  font-size: 1.1em;
}

.face.front {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.face.back {
  display: block;
  transform: rotateY(180deg);
  box-sizing: border-box;
  padding: 10px;
  color: white;
  font-size: 0.5em;
  text-align: justify;
  line-height: 1.5;
  overflow-y: auto;
}

.enlight:hover{
  color: limegreen;
}

footer{
  display: flex;
  justify-content: space-around;
  padding: 15px;
  border-top: 2px dotted white;
}

/** ANIMATION */

@keyframes nav-link-hover {
  from { color: white;   }
  to { color: Chartreuse;   }
}

@keyframes navigator-signal {
  0% { color: white }
  50% { color: red  }
  100% { color: white }
}

/** MEDIA QUERY */

@media (min-width: 280px) {
  .fig-container {
    margin-top: 5px;
  }
}

@media (min-width: 300px) {
  .fig-container {
    margin-top: 10px;
  }
}

@media (min-width: 300px) {
  .fig-container {
    min-height: 180px;
  }
}

@media (min-width: 350px) {
  .fig-container {
    min-height: 200px;
  }
}


@media (min-width: 385px) {
  .fig-container {
    min-height: 220px;
  }
}

@media (min-width: 425px) {
  .fig-container {
    min-height: 240px;
  }
  artcle { 
    margin: 75px 0px;
  }
}

